# altv-js-bytecode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: deploy.yml
cmake/: DepsDownload.cmake  GroupSources.cmake  Shared.cmake
compiler/: CMakeLists.txt  compiler.cpp  compiler.h  helpers.h
docs/: internal.md  module.md
executable/: CMakeLists.txt
executable/src/: cli.cpp  cli.h  logger.h  main.cpp  package.h
include/: Bytecode.h  bytecode.h  compiler.h
lib/: altv-js-bytecode-compiler.lib  altv-js-bytecode.lib
module/: CMakeLists.txt
module/src/: CScriptRuntimeInfo.h  logger.h  main.cpp  package.h  runtime.cpp  runtime.h  runtimev2.cpp  runtimev2.h
src/: compiler.cpp  compiler.h  main.cpp  resource.cpp  resource.h  runtime.cpp  runtime.h
src/util/: compiler.cpp  compiler.h
tools/: build.bat  build.sh
